k8s/1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quick
  labels:
    app.kubernetes.io/name: quick
    app.kubernetes.io/part-of: chickenrat-services
